5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1747_3087.log
== TEST (2019-05-16 11:17:47) 
-- CODE:
x = int(input("Digite um numero: "))

soma = 0

while(x != 0):
	if(x % 2 == 0):
		soma = soma + 2
	else:
		soma = soma + 2
print(round(soma, 2))
-- OUTPUT:
19
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:18:09) 
-- CODE:
x = int(input("Digite um numero: "))

soma = 0

while(x != 0):
	x = int(input("Digite um numero: "))
	if(x % 2 == 0):
		soma = soma + 2
	else:
		soma = soma + 2
print(round(soma, 2))
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:18:25) 
-- CODE:
x = int(input("Digite um numero: "))

soma = 0

while(x != 0):
	x = int(input("Digite um numero: "))
	if(x % 2 == 0):
		soma = soma + 2
	else:
		soma = soma + 2
print(round(soma, 2))
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:18:42) 
-- CODE:
x = int(input("Digite um numero: "))

soma = 0

while(x != 0):
	x = int(input("Digite um numero: "))
	if(x % 2 == 0):
		soma = soma + 2
		print(soma)
	else:
		soma = soma + 2
		print(soma)
print(round(soma, 2))
-- OUTPUT:
2
4
6
8
10
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:19:42) 
-- CODE:
x = int(input("Digite um numero: "))

soma = 0
i = 0

while(x != 0):
	x = int(input("Digite um numero: "))
	if(x % 2 == 0):
		soma = soma + 2
		i = i + 2
		print(i)
	else:
		soma = soma + 2
		i = i + 2
		print(soma)
print(round(soma, 2))
-- OUTPUT:
2
4
6
8
10
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:21:00) 
-- CODE:
x = int(input("Digite um numero: "))

soma = 0
i = 0

while(x > 0):
	if(x % 2 == 0):
		soma = soma + 2
		i = i + 2
		print(i)
	else:
		soma = soma + 2
		i = i + 2
		print(soma)
print(round(soma, 2))
	x = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 16
    x = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:22:15) 
-- CODE:
x = int(input("Digite um numero: "))

soma = 0
i = 0

while(x > 0):
	if(x % 2 == 0):
		soma = soma + 2
		i = i + 2
		media = soma + i
		print(i)
	else:
		soma = soma + 2
		i = i + 2
		media = soma + i
		print(soma)
print(round(soma, 2))
	x = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 18
    x = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:22:36) 
-- CODE:
x = int(input("Digite um numero: "))

soma = 0
i = 0

while(x > 0):
	x = int(input("Digite um numero: "))
	if(x % 2 == 0):
		soma = soma + 2
		i = i + 2
		media = soma + i
		print(i)
	else:
		soma = soma + 2
		i = i + 2
		media = soma + i
		print(soma)
print(round(soma, 2))
-- ERROR:
File "XXXX", line 18
    x = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:23:05) 
-- CODE:
x = int(input("Digite um numero: "))

soma = 0
i = 0

while(x != 0):
	x = int(input("Digite um numero: "))
	if(x % 2 == 0):
		soma = soma + 2
		i = i + 2
		media = soma + i
		print(i)
	else:
		soma = soma + 2
		i = i + 2
		media = soma + i
		print(soma)
print(round(soma, 2))
-- OUTPUT:
2
4
6
8
10
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:23:45) 
-- CODE:
x = int(input("Digite um numero: "))

soma = 0
i = 0

while(x != 0):
	x = int(input("Digite um numero: "))
	if(x % 2 == 0):
		soma = soma + 2
		print(soma)
	else:
		soma = soma + 2
		print(soma)
print(round(soma, 2))
-- OUTPUT:
2
4
6
8
10
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:24:13) 
-- CODE:
x = int(input("Digite um numero: "))

soma = 0
i = 0

while(x != 0):
	x = int(input("Digite um numero: "))
	if(x % 2 == 0):
		soma = soma + 2
		print(soma)
	else:
		soma = soma + 2
		print(soma)
print(round(soma, 2))
-- OUTPUT:
2
4
6
8
10
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:24:32) 
-- CODE:
x = int(input("Digite um numero: "))

soma = 0
i = 0

while(x != 0):
	x = int(input("Digite um numero: "))
	if(x % 2 == 0):
		soma = soma + 2
		print(soma)
	else:
		soma = soma + 2
		print(soma)
print(round(soma, 2))
-- OUTPUT:
2
4
6
8
10
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:40:11) 
-- CODE:
x = int(input("Digite um numero: "))

soma = 0
i = 0

while(x != 0):
	x = int(input("Digite um numero: "))
	if(x % 2 == 0):
		soma = soma + 2
		print(soma)
	else:
		soma = soma + 2
		print(soma)
print(round(soma, 2))
-- OUTPUT:
2
4
6
8
10
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:40:25) 
-- CODE:
x = int(input("Digite um numero: "))

soma = 0
i = 0

while(x != 0):
	x = int(input("Digite um numero: "))
	if(x % 2 == 0):
		soma = soma + 2
		print(soma)
	else:
		soma = soma + 2
		print(soma)
print(round(soma, 2))
-- EXECUTION TIME:
0.182887
-- TEST CASE 1:
---- input:
-10
-8
-6
-4
-2
0
---- correct output:
-6.0
0.0
---- user output:
2
4
6
8
10
10
-- TEST CASE 2:
---- input:
11
11
9
1
10
2
4
0
---- correct output:
5.33
8.0
---- user output:
2
4
6
8
10
12
14
14
-- TEST CASE 3:
---- input:
1
1
1
3
2
2
2
4
0
---- correct output:
2.5
1.5
---- user output:
2
4
6
8
10
12
14
16
16
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:44:26) 
-- CODE:
x = int(input("Digite um numero: "))

soma = 0
i = 0

while(x != 0):
	if(x % 2 == 0):
		soma = soma + 2
		print(soma)
	else:
		soma = soma + 2
		print(soma)
print(round(soma, 2))
-- OUTPUT:
2
4
6
8
10
12
14
16
18
20
22
24
26
28
30
32
34
36
38
40
42
44
46
48
50
52
54
56
58
60
62
64
66
68
70
72
74
76
78
80
82
84
86
88
90
92
94
96
98
100
102
104
106
108
110
112
114
116
118
120
122
124
126
128
130
132
134
136
138
140
142
144
146
148
150
152
154
156
158
160
162
164
166
168
170
172
174
176
178
180
182
184
186
188
190
192
194
196
198
200
202
204
206
208
210
212
214
216
218
220
222
224
226
228
230
232
234
236
238
240
242
244
246
248
250
252
254
256
258
260
262
264
266
268
270
272
274
276
278
280
282
284
286
288
290
292
294
296
298
300
302
304
306
308
310
312
314
316
318
320
322
324
326
328
330
332
334
336
338
340
342
344
346
348
350
352
354
356
358
360
362
364
366
368
370
372
374
376
378
380
382
384
386
388
390
392
394
396
398
400
402
404
406
408
410
412
414
416
418
420
422
424
426
428
430
432
434
436
438
440
442
444
446
448
450
452
454
456
458
460
462
464
466
468
470
472
474
476
478
480
482
484
486
488
490
492
494
496
498
500
502
504
506
508
510
512
514
516
518
520
522
524
526
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:44:40) 
-- CODE:
x = int(input("Digite um numero: "))

soma = 0
i = 0

while(x != 0):
	if(x % 2 == 0):
		soma = soma + 2
		print(soma)
	else:
		soma = soma + 2
		print(soma)
print(round(soma, 2))
-- OUTPUT:
2
4
6
8
10
12
14
16
18
20
22
24
26
28
30
32
34
36
38
40
42
44
46
48
50
52
54
56
58
60
62
64
66
68
70
72
74
76
78
80
82
84
86
88
90
92
94
96
98
100
102
104
106
108
110
112
114
116
118
120
122
124
126
128
130
132
134
136
138
140
142
144
146
148
150
152
154
156
158
160
162
164
166
168
170
172
174
176
178
180
182
184
186
188
190
192
194
196
198
200
202
204
206
208
210
212
214
216
218
220
222
224
226
228
230
232
234
236
238
240
242
244
246
248
250
252
254
256
258
260
262
264
266
268
270
272
274
276
278
280
282
284
286
288
290
292
294
296
298
300
302
304
306
308
310
312
314
316
318
320
322
324
326
328
330
332
334
336
338
340
342
344
346
348
350
352
354
356
358
360
362
364
366
368
370
372
374
376
378
380
382
384
386
388
390
392
394
396
398
400
402
404
406
408
410
412
414
416
418
420
422
424
426
428
430
432
434
436
438
440
442
444
446
448
450
452
454
456
458
460
462
464
466
468
470
472
474
476
478
480
482
484
486
488
490
492
494
496
498
500
502
504
506
508
510
512
514
516
518
520
522
524
526
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
